# apackager

./: Apackager.desktop  CMakeLists.txt  apackager.pro  commitdialog.cpp  commitdialog.h  commitdialog.ui  edtcategorydialog.cpp  edtcategorydialog.h  edtcategorydialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mpkg_manager_ru.qm  mpkg_manager_ru.ts  mpkgengine.cpp  mpkgengine.h  mpkghandler.cpp  mpkghandler.h  mpkgmodel.cpp  mpkgmodel.h  mpkgsettings.cpp  mpkgsettings.h  mpkgsettings.ui  mpkgthread.cpp  mpkgthread.h  progresswidget.cpp  progresswidget.h  progresswidget.ui  resources.qrc  settings.cpp  settings.h  settings.ui
categories.d/: compat_32.conf  console_applications.conf  development.conf  drivers.conf  emulations.conf  enlightenment.conf  fonts.conf  games.conf  gnome.conf  graphics.conf  kde.conf  kernel.conf  lxde.conf  mail.conf  multimedia.conf  network.conf  office.conf  proprietary.conf  science.conf  server.conf  sound.conf  system.conf  themes.conf  utils.conf  video.conf  xfce.conf
